<resources>
    <string name="app_name">LoginAndroidNativeJavaApp</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="not_registered">Not Registered?</string>
    <string name="register">REGISTER</string>
    <string name="register_user">Register</string>
    <string name="cnf_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="login">LOGIN</string>
    <string name="login_user">Loging</string>
</resources>