<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo"
        />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="@dimen/default_login_screen_edit_text_width"
        android:layout_height="@dimen/default_login_screen_edit_text_height"
        android:layout_marginTop="50dp"
        android:hint="@string/email"
        />

    <EditText
        android:id="@+id/txt_password"
        android:layout_width="@dimen/default_login_screen_edit_text_width"
        android:layout_height="@dimen/default_login_screen_edit_text_height"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/default_login_screen_edit_text_width"
        android:layout_height="40dp"
        android:text="@string/login"
        android:layout_marginTop="30dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:hint="@string/not_registered"
            />

        <TextView
            android:id="@+id/view_register"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingStart="10dp"
            android:textStyle="bold"
            android:hint="@string/register"
            />
    </LinearLayout>
</LinearLayout>